# ALSA_RealtimeProcess

./: CMakeLists.txt  LICENSE  README.md
examples/: duplex_main.cpp  playback.cpp  record.cpp
include/: alsa_capture.h  alsa_playback.h
src/: alsa_capture.cpp  alsa_playback.cpp
